Fix UI collapse icon

--- a/src/pages/NewCandidateForm/components/BackgroundRecheck/components/PreviousEmployment/index.less
+++ b/src/pages/NewCandidateForm/components/BackgroundRecheck/components/PreviousEmployment/index.less
@@ -68,6 +68,10 @@
     .ant-radio-wrapper {
       margin: 0 !important;
     }
+
+    .ant-collapse-icon-position-right > .ant-collapse-item > .ant-collapse-header .ant-collapse-arrow{
+      transform: translateY(10%);
+    }
   }
   .checkbox {
     padding-right: 1rem;
